# ersatz-kissatapi

./: .gitignore  .gitmodules  README.md  ersatz-kissatapi.cabal  hsc-magic.h  kissat.cabal  stack.yaml
src/Ersatz/Solver/Kissat/: API.hs
src/Kissat/: API.hsc
test/: Simple.hs  knight.hs  m.hs  mm.hs  osc.hs  twenty-four.hs
