name: ersatz-kissatapi

version:         0.0.0
build-type:      Simple
cabal-version:   >= 1.10
Synopsis:        A Haskell bundle of the Kissat SAT solver
Category:        Logic
License:         GPL-3-only
extra-source-files: hsc-magic.h

library
  hs-source-dirs: src
  exposed-modules:
    Kissat.API
    Ersatz.Solver.Kissat.API
  default-extensions: ForeignFunctionInterface
  build-depends:   base >= 3 && < 5, async, ersatz, containers, transformers, lens, text
  -- to find hsc-magic.h:
  include-dirs: .
  -- to find kissat.h and libkissat.a, you could: 1. use next two lines
  -- extra-include-dirs: /opt/kissat/latest/include
  -- extra-lib-dirs: /opt/kissat/latest/lib64
  -- or 2. provide these as command line arguments to cabal or stack.
  -- or 3. I think the correct method is to write this in some
  -- gobal config file $HOME/.cabal/config $HOME/.stack/config.yaml
  extra-libraries: kissat m
  default-language: Haskell2010

test-suite simple
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Simple.hs
  build-depends: base, ersatz-kissatapi

test-suite knight
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: knight.hs
  build-depends: base, ersatz, ersatz-kissatapi

test-suite twenty-four
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: twenty-four.hs
  build-depends: base, array, random, mtl, ersatz, ersatz-kissatapi

test-suite osc
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: osc.hs
  build-depends: base, ersatz, array, containers, ersatz-kissatapi, filepath, directory, hashable, optparse-applicative, async
  ghc-options: -threaded -rtsopts
