name: kissat

version:         0.0.0
build-type:      Simple
cabal-version:   >= 1.10
Synopsis:        A Haskell bundle of the Kissat SAT solver
Category:        Logic
License:         GPL-3-only
extra-source-files: kissat/src/kissat.h hsc-magic.h

library
  hs-source-dirs: src
  exposed-modules: Kissat.API
    Ersatz.Solver.Kissat.API
  default-extensions: ForeignFunctionInterface
  build-depends:   base >= 3 && < 5, async, ersatz, containers, transformers, lens
  -- C-sources:      
  -- CC-options:      -D__STDC_LIMIT_MACROS -D__STDC_FORMAT_MACROS
  extra-libraries: kissat
  include-dirs:    .
  default-language: Haskell2010

test-suite simple
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: Simple.hs
  build-depends: base, kissat

test-suite knight
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: knight.hs
  build-depends: base, kissat, ersatz